tdf#94739 use GetScanlineSize instead of calculating it

We calculate the scanline size wrongly when writing a PDF so the
image is not exported correctly. BitmapAccess already has a method
to determine the scanline size so use that instead.

Change-Id: Icccba8f26c5e0fd4bd4c37bba7c5a7fe8d0094bd
(cherry picked from commit 82e0c38e1205a3c8a70234a95ca33ab1400fbe57)
Signed-off-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/20595
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit ffe150ce903d9cdc62c25ad3437e61d24ede17d6)