vcl/source/gdi/pdfwriter_impl.cxx
@@ -11426,7 +11426,7 @@ bool PDFWriterImpl::writeBitmapObject( BitmapEmit& rObject, bool bMask )
         beginCompression();
         if( ! bTrueColor || pAccess->GetScanlineFormat() == BMP_FORMAT_24BIT_TC_RGB )
         {
-            const int nScanLineBytes = 1 + ( pAccess->GetBitCount() * ( pAccess->Width() - 1 ) / 8U );
+            const int nScanLineBytes = pAccess->GetScanlineSize();
 
             for( int i = 0; i < pAccess->Height(); i++ )
             {
